# Conman

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
Assets/: AppIcon.icns
Source/: OfflineConvolver.cpp  OfflineConvolver.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
